<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="title_activity_maps">Map</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="min_temperature">Min:</string>
    <string name="max_temperature">Max:</string>
    <string name="temperature_label">Temp:</string>
    <string name="pressure_lable">Press:</string>
    <string name="humidity_label">Hum:</string>
    <string name="detail">Detail</string>
    <string name="celciumDegree">\u2103</string>
    <string name="no_data_found">No data found</string>
    <string name="search_hint">Enter city or region name</string>
    <string name="search">Search</string>
</resources>
