<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">


    <data>
        <variable name="weatherForecast"
                  type="my.dzeko.weatherforecast.entity.WeatherForecast"/>
    </data>


    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="250dp">

        <TextView
                android:text="@{weatherForecast.dayAndMonth}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/day_tv"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
                tools:text="14 JAN"
                app:layout_constraintVertical_bias="0.13999999" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@{weatherForecast.weather}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/weather_tv" tools:text="Clear"
                app:layout_constraintStart_toStartOf="@+id/day_tv"
                app:layout_constraintTop_toBottomOf="@+id/day_tv"
                app:layout_constraintEnd_toEndOf="@+id/day_tv" android:layout_marginTop="8dp"/>
        <TextView
                android:text="@{Integer.toString(weatherForecast.minTemperature)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/min_temp_tv" tools:text="12"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="24dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.19999999"/>
        <TextView
                android:text="@string/min_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/min_temp_label_tv" tools:text="Min:"
                app:layout_constraintEnd_toStartOf="@+id/min_temp_tv" android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/min_temp_tv" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/min_temp_tv" app:layout_constraintVertical_bias="1.0"/>
        <TextView
                android:text="@{Integer.toString(weatherForecast.maxTemperature)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/max_temp_tv" tools:text="2"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/min_temp_tv"
                app:layout_constraintStart_toStartOf="@+id/min_temp_tv"
                app:layout_constraintEnd_toEndOf="@+id/min_temp_tv"
        />
        <TextView
                android:text="@string/max_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/max_temp_label_tv" tools:text="Max:"
                app:layout_constraintEnd_toStartOf="@+id/max_temp_tv" android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintTop_toTopOf="@+id/max_temp_tv"
                app:layout_constraintBottom_toBottomOf="@+id/max_temp_tv"/>
        <Button
                android:text="@string/detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/detail_button" tools:text="Detail" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</layout>