<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="detailForecast"
                  type="my.dzeko.weatherforecast.entity.WeatherForecastDetail"/>
    </data>

    <android.support.v7.widget.CardView android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        app:cardElevation="10dp"
                                        android:layout_marginTop="2dp"
    >

        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="match_parent">

            <TextView
                    style="@style/WeatherForecasDetailItemStyle"
                    android:text="@{detailForecast.time}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/time_tv" tools:text="12:15"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                    style="@style/WeatherForecasDetailItemStyle"
                    android:text="@{Integer.toString(detailForecast.temperature)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/temp_tv" tools:text="464"
                    app:layout_constraintTop_toTopOf="@+id/degree1_tv4"
                    app:layout_constraintEnd_toStartOf="@+id/degree1_tv4"
                    app:layout_constraintBottom_toBottomOf="@+id/degree1_tv4"/>
            <TextView
                    style="@style/WeatherForecasDetailItemStyle"
                    android:text="@string/temperature_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/temp_label_tv" tools:text="Temp:"
                    app:layout_constraintEnd_toStartOf="@+id/temp_tv" android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintTop_toTopOf="@+id/temp_tv"
                    app:layout_constraintBottom_toBottomOf="@+id/temp_tv"/>
            <TextView
                    style="@style/WeatherForecasDetailItemStyle"
                    android:text="@{Integer.toString(detailForecast.pressure)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pressure_tv" tools:text="1376"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/degree1_tv4"
                    app:layout_constraintEnd_toEndOf="@+id/degree1_tv4"
            />
            <TextView
                    style="@style/WeatherForecasDetailItemStyle"
                    android:text="@string/pressure_lable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pressure_label_tv" tools:text="Pres:"
                    app:layout_constraintTop_toTopOf="@+id/pressure_tv"
                    app:layout_constraintBottom_toBottomOf="@+id/pressure_tv"
                    app:layout_constraintEnd_toEndOf="@+id/temp_label_tv"/>
            <TextView
                    style="@style/WeatherForecasDetailItemStyle"
                    android:text="@{Integer.toString(detailForecast.humidity)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/humidity_tv" tools:text="100"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/pressure_tv"
                    app:layout_constraintStart_toStartOf="@+id/pressure_tv"
                    app:layout_constraintEnd_toEndOf="@+id/pressure_tv" app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
            <TextView
                    style="@style/WeatherForecasDetailItemStyle"
                    android:text="@string/humidity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/humidity_label_tv" tools:text="Hum:"
                    app:layout_constraintTop_toTopOf="@+id/humidity_tv"
                    app:layout_constraintBottom_toBottomOf="@+id/humidity_tv"
                    app:layout_constraintEnd_toEndOf="@+id/pressure_label_tv"/>
            <TextView
                    style="@style/WeatherForecasDetailItemStyle"
                    android:text="@{detailForecast.weatherName}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/weather_name_tv" tools:text="Cloudy"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/time_tv"
                    app:layout_constraintEnd_toStartOf="@+id/temp_label_tv"/>
            <TextView
                    style="@style/WeatherForecasDetailItemStyle"
                    android:text="@{detailForecast.weatherDescription}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/weather_detail_name" tools:text="Fully Cloud"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/weather_name_tv"
                    app:layout_constraintStart_toStartOf="@+id/weather_name_tv"
                    app:layout_constraintEnd_toEndOf="@+id/weather_name_tv"/>

            <TextView
                    style="@style/WeatherForecasDetailItemStyle"
                    android:text="@string/celciumDegree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/degree1_tv4"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</layout>